--- a/pods.yml
+++ b/pods.yml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: nodeapp
-      image: kammana/nodeapp:tagVersion
+      image: gurpartapsingh88/k8simage:latest
       ports:
         - containerPort: 8080
